# image-search

./: README.md
src-py/: .env  .gitignore  README.md  main.py  pyproject.toml
src-py/image_search/: __init__.py  feature_extractor.py  image_scrapper.py  indexer.py
src-react/: README.md  index.html  package.json
src-react/src/: App.tsx  index.css
src-react/src/components/: CompactSearchBar.tsx  ImageContainer.tsx  ImageSearchBar.tsx  Navbar.tsx  ResultsContainer.tsx  Sidebar.tsx
src-react/src/hooks/: useSidebar.tsx
src-react/src/types/: pywebview.d.ts
